public/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    overflow-x: hidden;
    font-weight:300;
    font-size: 14px;
    letter-spacing: .3px;
}

:root {
    --primary: #3730a3;
    --secondary: #71717a;
    --lightgray: #e5e7eb;
    --dark: #111827;
    --green: #22c55e;
    --lightblue: #a2d9ff;
    --violet: #5b21b6;
    --light: #f3f4f6;
    --lightbg:#f1f5f9;
}

.nav {
    padding: 1rem;
    display: flex;
    flex-wrap: wrap;
    width: 100vw;
    height: 6rem;
    justify-content: space-between;
    align-items: flex-end;
    background-color: #FFF;
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}
.nav a {
    font-size: 16px;
    border-bottom: 1px solid #FFF;
    text-decoration: none;
    color: var(--primary);
    overflow: hidden;
}
.nav ul li {
    overflow: hidden;
}
.nav a:hover{
    border-bottom: 1px solid var(--primary);
    color: var(--primary);
}
.mobileNav {
    display: none;
    flex-direction: column;
    width: 100vw;
}
.mobileMenu {
    display: none;
    background-image: url("./menu.png");
    background-position: center;
    background-repeat: no-repeat;
    width: 24px;
    height: 24px;
    cursor: pointer;
}
.menu {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    padding: 0;
    overflow: hidden;
  }
  .menu li {
    margin: 0 1rem;
  }
  #menu-toggle {
    display: none;
  }
.header {
    width: 250px;
    overflow: hidden;
}
.header img {
    width: 100%;
}
.links {
    display: flex;
    flex-direction: row;
}
.links a {
    margin-right: 1rem;
}
.announcementsWrapper {
    width: 100vw;
    padding-right: 15rem;
    height: fit-content;
    display: flex;
    justify-content: end;
}
.content {
    min-height: 83vh;
    width: 100vw;
    padding: 5rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}
.intro {
    display: flex;
    flex-direction: column;
    width: 40%;
}
.h1 {
    color: var(--primary);
    font-size: 32px;
    line-height: 3rem;
}
.h2 {
    color: var(--primary);
    font-size: 20px;
    line-height: 3rem;
}
.intro p {
    line-height: 1.5rem;
    font-weight: 300;
    font-size: 14px;
    margin: 1rem 0 2rem 0;
}
.emailList {
    display: flex;
    flex-direction: column;
}
.emailList input{
    border: 1px solid var(--secondary);
    border-radius: 5px;
    width: 50%;
    padding: 1rem;
    margin: .5rem .5rem 0 0;
}
.emailList button {
    border-radius: 5px;
    margin-top: 2rem;
    width: 50%;
    font-size: 18px;
}
.introImage {
    display: flex;
    background-color: #333;
    width: 50%;
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}
.introImageMobile {
    display: none;
    width: 100%;
    padding: 1rem;
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}
.introImageMobile img {
    width: 100%;
}
.button {
    cursor: pointer;
    outline: none;
    border:none;
    background-color: var(--primary);
    padding: .5rem 1rem .5rem 1rem;
    color: white;
}
.confirmEmail {
    font-size: small;
    font-style: italic;
    padding-top: 1rem;
}
.footer {
    display: flex;
    align-items: flex-end;
    padding: 1rem;
    color:var(--secondary);
    background-color: var(--lightbg);
    height: 3rem;
}

@media (max-width: 667px) {
    .nav {
        position:fixed;
        top:0;
    }
    .h1 {
        font-size: 24px;
    }
    .content {
        margin-top: 6rem;
    }
    .header {
        width: 50%;
    }
    .header img {
        object-fit: contain;
    }
    .links {
        display: none;
    }
    .announcementsWrapper{
    justify-content: flex-start;
    padding: 0;
    }
    .mobileMenu {
        display:block;
    }
    .mobileNav {
        display: block;
    }
    .menu {
        position: fixed;
        top: 75px;
        left: 0;
        flex-direction: column;
        width: 100%;
        align-items: center;
        display: flex;
        background-color: #FFF;
        height: 0;
        transition: height 400ms;
      }
      .menu li a {
          font-size: 28px;
      }
      .menu li, a {
          height: 0;
          transition: height 400ms;
      }
      #menu-toggle:checked ~ .menu {
        transition: height 400ms;
        height: 40vh;
        padding: 1em;
        background-color: #FFF;
        width: 100vw;
        display: flex;
        border-bottom: 1px solid var(--secondary);
      }
      #menu-toggle:checked ~ .menu li {
          overflow: visible;
          margin-bottom: 1rem;
        height: min-content;
        transition: height 400ms;
      }
    .content {
        flex-direction: column;
        padding: 1rem;
        justify-content: flex-start;
        align-items: flex-start;
    }
    .intro {
        text-align: center;
        width: 100%;
    }
    .introImage {
        display: none;
    }
    .intro p {
        margin: 1rem 0 1rem 0;
    }
    .emailList .h2 {
font-weight: bold;
line-height: normal;
    }
    .emailList {
        text-align: left;
        width: 100%;
        padding: 1rem;
        margin: 2rem 0 2rem 0;
        background-color:var(--light);
    }
    .emailList button {
        width: 50%;
    }
    .emailList input {
        margin: 1rem 0 0 0;
        width: 50%;
    }
    .introImageMobile {
        display: block;
    }   
}

